--- a/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -39,7 +39,7 @@
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0 py-2">
-            <li><a th:action="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
+            <li><a th:href="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
             <li><a th:href="@{/inicio}" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
           </ul>
     
