--- a/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -43,11 +43,12 @@
             </li>
           </ul>
     
+            <div class="">
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
               data-bs-toggle="dropdown" aria-expanded="false">
               <img th:src="@{/imagen/perfil/__${session.usuariosession.id_usuario}__}" alt="" width="32" height="32" class="rounded-circle me-2">
-              <span th:text="${usuario.nombre}" class="text-uppercase"></span>
+              <span th:text="${usuario.nombre}"></span>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
               <li><a class="dropdown-item" th:href="@{/perfil}" >Perfil</a></li>
@@ -57,6 +58,7 @@
               <li><a class="dropdown-item" th:href="@{/logout}">Cerrar Sesion</a></li>
             </ul>
           </div>
+           </div>
     
         </div>
       </div>
